@startuml

class Room {
    -String building
    -int number
    -int seats
    -String label
    -String info
}

class Lesson {
    -Enum TD/TP/CM/CC/CT
}

class Person {
    -String lastname
    -String firstName
    -Date birthDate
    -String email
}

class Yeargroup {
    -String label
}

class Course {
    -String label
    -int nbHour
}

class Constraint {
    -Day dayOfTheWeek
    -Hour startHour
    -Hour endHour
}

class Group {
    -String label
}

class Student

class Teacher {
    -String laboratory
    -Enum Lecturer/Prof/Adjunct_Prof
}

class Reservation {
    -Date startDate
    -Date endDate
    -String label
    -String memo
    -Enum NP/Canceled/Postponed
}

class ExamBoard

class AdmissionExam 

class AdmissionExamLabel {
    -String label
}

AdmissionExam "*" -- "1" AdmissionExamLabel

Room "1" -- "*" Reservation

Student "*" --* "*" Group

Group "*" --* "1" Yeargroup 

Lesson "*" ---- "*" Group

Lesson "*" -- "*" Course

Teacher "1" -- "*" Constraint

Lesson -up-|> Reservation

Defence -up-|> Reservation

ExamBoard -up-|> Reservation

AdmissionExam -up-|> Reservation

Student --|> Person

Teacher --|> Person

AdmissionExam "*" -- "*" Student

Reservation "*" -- "*" Teacher

ExamBoard "1" -- "1" Yeargroup

Defence "*" -- "1" Student

@enduml
